meta clean up, og tags gh-22

--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "About Our Addiction Treatment Center | Flatirons Recovery",
-    "description": "Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!",
-    "keywords": "addiction treatment, substance use, mental health disorder"
+    "description": "Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!",
+    "keywords": "addiction treatment, substance use, mental health disorder",
+    "ogImage": "/about/wooden-fence.jpg"
 } -->
 
 <style>
