--- a/src/addiction/alcohol/index.v.html
+++ b/src/addiction/alcohol/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Alcohol Addiction Rehab | Flatirons Recovery",
-    "description": "alcohol addiction",
-    "keywords": "mens alcohol addiction, substance abuse, colorado alcohol addiction"
+    "description": "Alcoholism, Alcohol Use Disorder and how a Flatirons Recovery alcohol treatment program works. Learn More.",
+    "keywords": "alcohol addiction, alcohol use disorder, colorado alcohol addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
