--- a/src/addiction/cocaine/index.v.html
+++ b/src/addiction/cocaine/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Cocaine Addiction Rehab | Flatirons Recovery",
-    "description": "cocaine addiction",
-    "keywords": "mens cocaine addiction, substance abuse, colorado cocaine addiction"
+    "description": "Treatment for Cocaine Use Disorder/ Addiction at Flatirons Recovery and more about our addiction treatment program.",
+    "keywords": "mens cocaine addiction, substance abuse, colorado cocaine addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
