--- a/src/addiction/heroin/index.v.html
+++ b/src/addiction/heroin/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Heroin Addiction Rehab | Flatirons Recovery",
     "description": "heroin addiction",
-    "keywords": "mens heroin addiction, substance abuse, colorado heroin addiction"
+    "keywords": "mens heroin addiction, substance abuse, colorado heroin addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
