--- a/src/addiction/marijuana/index.v.html
+++ b/src/addiction/marijuana/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Marijuana Addiction Rehab | Flatirons Recovery",
     "description": "marijuana addiction",
-    "keywords": "mens marijuana addiction, substance abuse, colorado marijuana addiction"
+    "keywords": "mens marijuana addiction, substance abuse, colorado marijuana addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
