--- a/src/addiction/methamphetamine/index.v.html
+++ b/src/addiction/methamphetamine/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Methamphetamine Addiction Rehab | Flatirons Recovery",
     "description": "methamphetamine addiction",
-    "keywords": "mens methamphetamine addiction, substance abuse, colorado methamphetamine addiction"
+    "keywords": "mens methamphetamine addiction, substance abuse, colorado methamphetamine addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
