--- a/src/addiction/prescription-medication/index.v.html
+++ b/src/addiction/prescription-medication/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Prescription Medication Addiction Rehab | Flatirons Recovery",
     "description": "Prescription addiction",
-    "keywords": "prescription drug addiction, substance abuse, colorado prescription drug addiction"
+    "keywords": "prescription drug addiction, substance abuse, colorado prescription drug addiction",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
