--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Admissions | Flatirons Recovery",
-    "description": "Our treatment center addmission process and what to expect.",
-    "keywords": "rehab admission process"
+    "description": "Our treatment center addmission process and what to expect. Learn more about the admission process.",
+    "keywords": "rehab admission process",
+    "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 
 <style>
