--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Contact | Flatirons Recovery",
     "description": "How to contact Flatirons Recovery, a drug and alcohol treatment center in Colorado.",
-    "keywords": "contact flatirons recovery"
+    "keywords": "contact flatirons recovery",
+    "ogImage": "/contact/log.jpg"
 } -->
 
 <style>
