--- a/src/faq/index.v.html
+++ b/src/faq/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
-    "title": "Frequently Asked Questions | Flatirons Recovery",
-    "description": "See the frequently asked questions at Flatirons Recovery. See our FAQs, and learn more!",
-    "keywords": "covid 19, infectious disease"
+    "title": "Frequently Asked Questions - Addiction Treatment at Flatirons Recovery",
+    "description": "See the frequently asked questions about treatment at Flatirons Recovery. See our FAQs, and learn more!",
+    "keywords": "question about treatment, addiction treatment program",
+    "ogImage": "/about/wooden-fence.jpg"
 } -->
 
 <style>
