--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Flatirons Recovery Center | Colorado Substance Abuse Treatment",
     "description": "Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
-    "keywords": "addiction treatment, substance use, mental health disorder"
+    "keywords": "addiction treatment, substance use, mental health disorder",
+    "ogImage": "/assets/images/cover.jpg"
 } -->
 
 <div class="cover">
@@ -29,11 +30,6 @@
                     <h2>About Us</h2>
                     <hr>
                 </div>
-                <!-- What Treatment Looks Like At Flatirons Recovery
-
-At Flatirons Recovery, clients can expect compassionate, evidence-based dual diagnosis treatment for substance use and mental health disorders.
-
-Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, healing from trauma, learning skills to successfully cope with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery. -->
 
                 <div class="col-xs-12">
                     <h3>Our Mission</h3>
