--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -9,6 +9,13 @@
     <meta name="description" content="<!-- { "variable": "description" } -->">
     <meta name="keywords" content="<!-- { "variable": "keywords" } -->">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="<!-- { "variable": "title"} -->">
+	<meta property="og:description" content="<!-- { "variable": "description" } -->">
+	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
