--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Mental Health Treatment | Flatirons Recovery",
-    "description": "Mental health and dual diagnosis treatment and how it refers to Flatirons Recovery. Learn more!",
-    "keywords": "dual diagnosis treatment, mental health disorders, treatment therapy"
+    "description": "Mental health and dual diagnosis in treatment at Flatirons Recovery. Learn more about dual-diagnosis treatment.",
+    "keywords": "dual diagnosis treatment, mental health disorders, treatment therapy",
+    "ogImage": "/mental-health/hills-sunset.jpg"
 } -->
 
 <style>
