--- a/src/mindfulness/index.v.html
+++ b/src/mindfulness/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Mindfulness | Flatirons Recovery",
     "description": "Mindfulness - the capacity to be with whatever it is that is happening with you at any given moment, in a non-judgmental way. Read more.",
-    "keywords": "mindfulness practices, drug and alcohol treatment"
+    "keywords": "mindfulness practices, drug and alcohol treatment",
+    "ogImage": "/mindfulness/summit-view.jpg"
 } -->
 
 <style>
