--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
-    "title": "Sober Living | Flatirons Recovery",
-    "description": "Sober Living",
-    "keywords": "prescription drug addiction, substance abuse, colorado prescription drug addiction"
+    "title": "Colorado Sober Living | Flatirons Recovery",
+    "description": "Flatirons Recovery offers a comfortable, structured, gender-specific Sober Living environment for it's clients. See the details.",
+    "keywords": "prescription drug addiction, substance abuse, colorado prescription drug addiction",
+    "ogImage": "/sober-living/rockies.jpg"
 } -->
 <style>
     .main {
