--- a/src/team/index.v.html
+++ b/src/team/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Meet Our Team | Flatirons Recovery",
-    "description": "Meet our team of compassionate professions. Learn more about the people that make Flatirons Recovery.",
-    "keywords": "professional team, compassionate therapists, treatment professional"
+    "description": "Meet our team of compassionate professionals. Learn more about the people that make Flatirons Recovery.",
+    "keywords": "professional team, compassionate therapists, treatment professional",
+    "ogImage": "/about/wooden-fence.jpg"
 } -->
 
 <style>
