--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -1,7 +1,8 @@
 <!-- {
     "title": "Drug and Alcohol Treatment | Flatirons Recovery",
     "description": "Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ",
-    "keywords": "evidence-based treatment, treatment, disorders, addiction therapy"
+    "keywords": "evidence-based treatment, treatment, disorders, addiction therapy",
+    "ogImage": "/treatment/blue-brook.jpg"
 } -->
 
 <style>
