--- a/dst/addiction/heroin/index.html
+++ b/dst/addiction/heroin/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="heroin addiction">
     <meta name="keywords" content="mens heroin addiction, substance abuse, colorado heroin addiction">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Heroin Addiction Rehab | Flatirons Recovery">
+	<meta property="og:description" content="heroin addiction">
+	<meta property="og:image" content="/admission/flatirons-hill.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
