--- a/dst/contact/index.html
+++ b/dst/contact/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="How to contact Flatirons Recovery, a drug and alcohol treatment center in Colorado.">
     <meta name="keywords" content="contact flatirons recovery">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Contact | Flatirons Recovery">
+	<meta property="og:description" content="How to contact Flatirons Recovery, a drug and alcohol treatment center in Colorado.">
+	<meta property="og:image" content="/contact/log.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
