--- a/dst/faq/index.html
+++ b/dst/faq/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Frequently Asked Questions | Flatirons Recovery</title>
+    <title>Frequently Asked Questions - Addiction Treatment at Flatirons Recovery</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="See the frequently asked questions at Flatirons Recovery. See our FAQs, and learn more!">
-    <meta name="keywords" content="covid 19, infectious disease">
+    <meta name="description" content="See the frequently asked questions about treatment at Flatirons Recovery. See our FAQs, and learn more!">
+    <meta name="keywords" content="question about treatment, addiction treatment program">
+
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Frequently Asked Questions - Addiction Treatment at Flatirons Recovery">
+	<meta property="og:description" content="See the frequently asked questions about treatment at Flatirons Recovery. See our FAQs, and learn more!">
+	<meta property="og:image" content="/about/wooden-fence.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
