--- a/dst/mindfulness/index.html
+++ b/dst/mindfulness/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Mindfulness - the capacity to be with whatever it is that is happening with you at any given moment, in a non-judgmental way. Read more.">
     <meta name="keywords" content="mindfulness practices, drug and alcohol treatment">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Mindfulness | Flatirons Recovery">
+	<meta property="og:description" content="Mindfulness - the capacity to be with whatever it is that is happening with you at any given moment, in a non-judgmental way. Read more.">
+	<meta property="og:image" content="/mindfulness/summit-view.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
