--- a/dst/treatment/index.html
+++ b/dst/treatment/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ">
     <meta name="keywords" content="evidence-based treatment, treatment, disorders, addiction therapy">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Drug and Alcohol Treatment | Flatirons Recovery">
+	<meta property="og:description" content="Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ">
+	<meta property="og:image" content="/treatment/blue-brook.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
