--- a/dst/admission/index.html
+++ b/dst/admission/index.html
@@ -6,8 +6,15 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Our treatment center addmission process and what to expect.">
+    <meta name="description" content="Our treatment center addmission process and what to expect. Learn more about the admission process.">
     <meta name="keywords" content="rehab admission process">
+
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Admissions | Flatirons Recovery">
+	<meta property="og:description" content="Our treatment center addmission process and what to expect. Learn more about the admission process.">
+	<meta property="og:image" content="/admission/flatirons-hill.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
