--- a/dst/index.html
+++ b/dst/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
     <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="Flatirons Recovery Center | Colorado Substance Abuse Treatment">
+	<meta property="og:description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
+	<meta property="og:image" content="/assets/images/cover.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
@@ -129,11 +136,6 @@
                     <h2>About Us</h2>
                     <hr>
                 </div>
-                <!-- What Treatment Looks Like At Flatirons Recovery
-
-At Flatirons Recovery, clients can expect compassionate, evidence-based dual diagnosis treatment for substance use and mental health disorders.
-
-Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, healing from trauma, learning skills to successfully cope with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery. -->
 
                 <div class="col-xs-12">
                     <h3>Our Mission</h3>
