blog header image, build

--- a/dst/faq/index.html
+++ b/dst/faq/index.html
@@ -83,14 +83,15 @@
                         <li>
                             <a>Addictions</a>
                             <ul>
-                                <a href="/addiction/alcohol/">Alcohol</a>
-                                <a href="/addiction/heroin/">Heroin</a>
-                                <a href="/addiction/cocaine/">Cocaine</a>
-                                <a href="/addiction/marijuana/">Marijuana</a>
-                                <a href="/addiction/methamphetamine/">Methamphetamine</a>
-                                <a href="/addiction/prescription-medication/">Prescription Medication</a>
+                                <li><a href="/addiction/alcohol/">Alcohol</a></li>
+                                <li><a href="/addiction/heroin/">Heroin</a></li>
+                                <li><a href="/addiction/cocaine/">Cocaine</a></li>
+                                <li><a href="/addiction/marijuana/">Marijuana</a></li>
+                                <li><a href="/addiction/methamphetamine/">Methamphetamine</a></li>
+                                <li><a href="/addiction/prescription-medication/">Prescription Medication</a></li>
                             </ul>
                         </li>
+                        <!-- <li><a href="/blog">Blog</a></li> -->
                         <li>
                             <a>More</a>
                             <ul>
@@ -141,8 +142,8 @@
             <li><strong>Snow gear (October – March)</strong> Winter Hats/Warm Gloves/Scarfs/ski pants/socks/warm clothes – There’s an old saying in Colorado that, if you don’t like the weather, just wait a couple of hours. The weather can be quite unpredictable—especially in the mountains—so please come prepared for the elements.</li>
             <li><strong>Exercise clothes/shoes</strong> – Movement (yoga, hiking, etc.) is a core component of Flatirons Recovery Center’s programming both at the treatment center, as well as the house. If it is safe to do so, clients taking part in sober living can expect to go to the gym at least three times per week, and otherwise may utilize the sober living’s exercise equipment.</li>
             <li><strong>Personal Water Bottle</strong> – Hydration is incredibly important for everyone in early recovery, and especially for those coming to Flatirons Recovery Center from lower altitudes. Please bring your own water bottle, as we strongly discourage clients sharing them with each other.</li>
-            <li><strong>Musical Instruments</strong> – Please, please, please feel free to bring musical instruments to play during your time in treatment with us, as music in an extraordinarily positive and effective coping activity.</li>
-            <li><strong>Sunglasses</strong> – Proper eye protection at higher altitudes is</li>
+            <li><strong>Musical Instruments</strong> – Please, please, please feel free to bring musical instruments to play during your time in treatment with us, as music is an extraordinarily positive and effective coping activity.</li>
+            <li><strong>Sunglasses</strong> – Proper eye protection at higher altitudes is essential.</li>
             <li><strong>Headphones/MP3 player</strong></li>
             <li><strong>Cigarettes</strong> – House Managers typically make one run per week to afford clients an opportunity to purchase nicotine, so please bring enough cigarettes to last for the week and money to buy more at that time.</li>
             <li><strong>Hair dryer/curling iron/brushes/combs</strong></li>
