fixed missing ogImages gh-24

--- a/dst/confidentiality/index.html
+++ b/dst/confidentiality/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:site_name" content="Flatirons Recovery Centers">
 	<meta property="og:title" content="Notice of Confidentiality | Flatirons Recovery">
 	<meta property="og:description" content="Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!">
-	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
+	<meta property="og:image" content="/assets/images/wooden-fence.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -115,7 +115,7 @@
 
 <style>
     .main {
-        background-image: url('');
+        background-image: url('/assets/images/wooden-fence.jpg');
     }
 </style>
 
