--- a/src/confidentiality/index.v.html
+++ b/src/confidentiality/index.v.html
@@ -2,12 +2,13 @@
 <!-- {
     "title": "Notice of Confidentiality | Flatirons Recovery",
     "description": "Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!",
-    "keywords": "addiction treatment, substance use, mental health disorder"
+    "keywords": "addiction treatment, substance use, mental health disorder",
+    "ogImage": "/assets/images/wooden-fence.jpg"
 } -->
 
 <style>
     .main {
-        background-image: url('');
+        background-image: url('/assets/images/wooden-fence.jpg');
     }
 </style>
 
