hide share if no share api

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -173,7 +173,7 @@
         </div>
     </footer>
 
-    <button class="share">Share</button>
+    <button class="share" hidden>Share</button>
 
 </body>
 </html>
