updates from email, build

--- a/dst/index.html
+++ b/dst/index.html
@@ -48,11 +48,6 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
-    <div class="action">
-        <a href="tel:303-578-4536" data-track="click: phone, click">
-            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
-        </a>
-    </div>
 
     <div class="banner">
         <button class="blue close">X</button>
@@ -148,7 +143,7 @@
                     <h3>Our Mission</h3>
                     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
@@ -367,7 +362,12 @@
 			</div>
         </div>
     </footer>
-
+    
+    <div class="action">
+        <a href="tel:303-578-4536" data-track="click: phone, click">
+            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
+        </a>
+    </div>
     <button class="share" hidden>Share</button>
 
     <script src="//cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
