--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -33,12 +33,13 @@
                     <li>Peer and Staff support and accountability</li>
                     <li>Assistance with developing connection to community-based recovery programs (12-Step/SMART)</li>
                     <li>Daily house meetings</li>
+                    <li>Food provided by Flatirons Recovery</li>
                 </div>
                 <div class="col-xs-12 col-sm">
-                    <li>Food provided by Flatirons Recovery</li>
                     <li>Transportation both to and from Flatirons Recovery’s counseling center</li>
                     <li>Wi-Fi Internet Access</li>
                     <li>Staff facilitated outdoor activities</li>
+                    <li>Gym/Pool Membership</li>
                 </div>
 
             </div>
