--- a/dst/about/index.html
+++ b/dst/about/index.html
@@ -48,11 +48,6 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
-    <div class="action">
-        <a href="tel:303-578-4536" data-track="click: phone, click">
-            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
-        </a>
-    </div>
 
     <div class="banner">
         <button class="blue close">X</button>
@@ -136,7 +131,7 @@
 <div class="wrap">
     <h2>Our Mission</h2>
     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives. </p>
-    <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
+    <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
     <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
 </div>
 
@@ -218,7 +213,12 @@
 			</div>
         </div>
     </footer>
-
+    
+    <div class="action">
+        <a href="tel:303-578-4536" data-track="click: phone, click">
+            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
+        </a>
+    </div>
     <button class="share" hidden>Share</button>
 
     <script src="//cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
