--- a/dst/sober-living/index.html
+++ b/dst/sober-living/index.html
@@ -48,11 +48,6 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
-    <div class="action">
-        <a href="tel:303-578-4536" data-track="click: phone, click">
-            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
-        </a>
-    </div>
 
     <div class="banner">
         <button class="blue close">X</button>
@@ -146,12 +141,13 @@
                     <li>Peer and Staff support and accountability</li>
                     <li>Assistance with developing connection to community-based recovery programs (12-Step/SMART)</li>
                     <li>Daily house meetings</li>
+                    <li>Food provided by Flatirons Recovery</li>
                 </div>
                 <div class="col-xs-12 col-sm">
-                    <li>Food provided by Flatirons Recovery</li>
                     <li>Transportation both to and from Flatirons Recovery’s counseling center</li>
                     <li>Wi-Fi Internet Access</li>
                     <li>Staff facilitated outdoor activities</li>
+                    <li>Gym/Pool Membership</li>
                 </div>
 
             </div>
@@ -223,7 +219,12 @@
 			</div>
         </div>
     </footer>
-
+    
+    <div class="action">
+        <a href="tel:303-578-4536" data-track="click: phone, click">
+            <object data="/assets/phone.svg" type="image/svg+xml">Phone Icon</object>
+        </a>
+    </div>
     <button class="share" hidden>Share</button>
 
     <script src="//cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
