--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -36,14 +36,15 @@
                 <li>Nutrition for early recovery</li>
                 <li>Relationships</li>
                 <li>Community-based recovery models such as Smart Recovery and AA/12-Step.</li>
+                <li>Experiential programing including art therapy, equine therapy, hiking, and rock climbing.</li>
             </ul>
-            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery Center’s sober living, please click here.</p>
-            <p>During Day Treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs.</p>
+            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery Center’s sober living, please <a href="/sober-living">click here</a>.</p>
+            <p>During Day Treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs. Individual therapy may include biofeedback, art therapy, and trauma therapy such as EMDR, when indicated.</p>
             <p>Day Treatment at Flatirons Recovery lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
             <p>Often, clients transition from Day Treatment to our IOP for 4-12 weeks in order to continue receiving recovery support, structure, and accountability, while re-engaging in work and/or independent living.</p>
 
             <h3>Intensive Outpatient (IOP)</h3>
-            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 5:30 – 8:30pm for group therapy.</p>
+            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
             <p>Group topics addressed in IOP include, but are not limited to:</p>
             <ul>
                 <li>CBT/DBT skills for relapse prevention</li>
@@ -63,7 +64,7 @@
             <ul>
                 <div class="row">
                     <div class="col-xs-12 col-sm">
-                        <li>Healing trauma</li>
+                        <li>Healing trauma (EMDR)</li>
                         <li>Habitual thought and behavioral patterns</li>
                         <li>Healing and shifting outdated core beliefs</li>
                         <li>Family systems dynamics</li>
@@ -97,7 +98,7 @@
                     </div>
                     <div class="col-xs-12 col-sm">
                         <li>Mindfulness</li>
-                        <li>Nutrition for early recovery</li>
+                        <li>Nutrition for early recovery (Pro-Recovery Diet)</li>
                         <li>Having fun in recovery</li>
                         <li>Grief and loss</li>
                     </div>
