added tracking to forms

--- a/dst/contact/index.html
+++ b/dst/contact/index.html
@@ -145,7 +145,7 @@
 <p>If you’d like Flatirons Recovery to <a href="/admission#verify-insurance">verify your insurance</a>, you may do that at any time.</p>
 
 
-        <form class="row">
+        <form class="row" data-track="submit: contact-form, submit">
             <!-- <div class="col-xs-12">
                 <h3>send us a message</h3>
             </div> -->
