--- a/dst/index.html
+++ b/dst/index.html
@@ -255,7 +255,7 @@
 </div>
 
 <div class="wrap" id="message">
-    <form class="row">
+    <form class="row" data-track="submit: contact-form, submit">
         <div class="col-xs-12">
             <h2>Message Us</h2>
 <p>To begin your healing journey from addiction simply fill out the form below, or call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a>.</p>
