--- a/src/index.v.html
+++ b/src/index.v.html
@@ -133,7 +133,7 @@
 </div>
 
 <div class="wrap" id="message">
-    <form class="row">
+    <form class="row" data-track="submit: contact-form, submit">
         <div class="col-xs-12">
             <!-- { "partial": "/partials/message-us.p.html" } -->
         </div>
