--- a/dst/admission/index.html
+++ b/dst/admission/index.html
@@ -164,7 +164,7 @@
 <div class="wrap" id="verify-insurance">
     <h2>Verify Insurance</h2>
     <h4>Complete form below to verify insurance benefits.</h4>
-    <form>
+    <form data-track="submit: insurance-form, submit">
         <field>
             <legend>Contact</legend>
             <div class="row">
