--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -32,7 +32,7 @@
     <div class="col-xs-12 col-sm-8 col-md-9">
         <!-- { "partial": "/partials/message-us.p.html" } -->
 
-        <form class="row">
+        <form class="row" data-track="submit: contact-form, submit">
             <!-- <div class="col-xs-12">
                 <h3>send us a message</h3>
             </div> -->
