added rti blurb

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -77,7 +77,7 @@
         </div>
         <div class="row middle-xs center-xs">
             <div class="col-xs-12">
-        		<nav class="nav-bar">
+        		<nav class="nav-bar" hidden>
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About</a></li>
