treatment page break out

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -81,7 +81,16 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About</a></li>
-                        <li><a href="/treatment">Treatment</a></li>
+                        <li>
+                            <!-- <a href="/treatment">Treatment</a></li> -->
+                            <a>Treatment</a>
+                            <ul>
+                                <li><a href="/treatment/therapy">Therapy</a></li>
+                                <li><a href="/treatment/php">Day Treatment</a></li>
+                                <li><a href="/treatment/iop">Intensive Outpatient</a></li>
+                                <li><a href="/treatment/modalities">Theraputic Modalities</a></li>
+                            </ul>
+                        </li>
                         <li>
                             <a>Addictions</a>
                             <ul>
